--- a/package.json
+++ b/package.json
@@ -1,25 +1,30 @@
 {
-  "name": "unblocked-games-crack-hub",
-  "version": "1.0.0",
-  "description": "Professional unblocked games platform with Google Docs disguise",
-  "main": "index.html",
-  "scripts": {
-    "dev": "python -m http.server 8000",
-    "build": "echo 'Static site - no build required'"
-  },
-  "keywords": [
-    "games",
-    "unblocked",
-    "html5",
-    "javascript",
-    "cloudflare"
-  ],
-  "author": "AnonyRyan",
-  "license": "MIT",
-  "devDependencies": {
-    "netlify-cli": "^17.0.0"
-  },
-  "engines": {
-    "node": ">=18.0.0"
-  }
+    "name": "alloyproxy",
+    "version": "1.0.0",
+    "description": "Proxy library to unblock the web!",
+    "main": "app.js",
+    "scripts": {
+        "test": "node app.js",
+        "start": "node app.js"
+    },
+    "keywords": [
+        "proxy",
+        "unblocker",
+        "web",
+        "proxy"
+    ],
+    "author": "Titanium Network",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/titaniumnetwork-dev/alloyproxy/issues"
+    },
+    "homepage": "https://github.com/titaniumnetwork-dev/alloyproxy#readme",
+    "dependencies": {
+        "alloyproxy": "^1.0.0",
+        "cookie-parser": "^1.4.5",
+        "express": "^4.17.1",
+        "express-session": "^1.17.1",
+        "mime-types": "^2.1.27",
+        "xss": "^1.0.8"
+    }
 }
